// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`json.spec yarnLockParsedV1ToRawJSON 1`] = `
{
  "object": {},
  "version": "5",
}
`;

exports[`json.spec yarnLockParsedV2ToRawJSON 1`] = `
{
  "__metadata": {
    "version": "5",
  },
}
`;
